--- a/01_Foundations/01_Intro_Python_Data_Structures.ipynb
+++ b/01_Foundations/01_Intro_Python_Data_Structures.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "rVQOnZDGKSGE"
    },
    "source": [
@@ -12,6 +13,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "03chmwizD2r4"
    },
    "source": [
@@ -25,6 +27,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "03chmwizD2r4"
    },
    "source": [
@@ -57,7 +60,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "---\n",
     "<a class=\"anchor\" id=\"1\"></a>\n",
@@ -67,7 +72,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "JupyterLab is based on Jupyter Notebooks.  Each Notebook is composed of one or more **cells** and is associated with a **kernel**. \n",
     "\n",
@@ -114,6 +121,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "u0Gp24pIKK0Y"
    },
    "source": [
@@ -137,11 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 608,
      "status": "ok",
@@ -156,7 +165,18 @@
     "id": "IHZ7UcyJx4rs",
     "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0x1.91eb851eb851fp+1'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The variable \"a\" points to the float object whose value is 3.14\n",
     "a = 3.14\n",
@@ -165,11 +185,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 608,
      "status": "ok",
@@ -184,7 +205,18 @@
     "id": "IHZ7UcyJx4rs",
     "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140510598477680"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The address of the object pointed to by \"a\"\n",
     "id(a)"
@@ -192,11 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 608,
      "status": "ok",
@@ -211,7 +244,18 @@
     "id": "IHZ7UcyJx4rs",
     "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140510598477680"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The variable \"b\" now points to the same object as \"a\"\n",
     "b = a\n",
@@ -220,11 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 608,
      "status": "ok",
@@ -239,7 +284,18 @@
     "id": "IHZ7UcyJx4rs",
     "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a is b"
    ]
@@ -251,6 +307,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 608,
      "status": "ok",
@@ -275,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "a is b"
@@ -284,6 +343,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "c_GeHCaaqRXm"
    },
    "source": [
@@ -296,6 +356,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "c_GeHCaaqRXm"
    },
    "source": [
@@ -315,6 +376,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 593,
      "status": "ok",
@@ -340,6 +402,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "ffR-kAy8w4LJ"
    },
    "source": [
@@ -356,6 +419,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 572,
      "status": "ok",
@@ -380,6 +444,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "e1J6uoOk4zKb"
    },
    "outputs": [],
@@ -388,6 +453,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "wYgzC82N7mxL"
    },
    "source": [
@@ -404,6 +470,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 884,
      "status": "ok",
@@ -428,7 +495,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "z**0.5"
@@ -437,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "(z**0.5)**2"
@@ -446,6 +517,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "mcoAQB4d4KZJ"
    },
    "source": [
@@ -458,6 +530,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "7Kf1gzxMxin9"
    },
    "source": [
@@ -473,6 +546,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 1292,
      "status": "ok",
@@ -501,6 +575,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "lVsASxSmOIa6"
    },
    "source": [
@@ -515,6 +590,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "lVsASxSmOIa6"
    },
    "source": [
@@ -531,6 +607,7 @@
      "base_uri": "https://localhost:8080/",
      "height": 240
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 1296,
      "status": "error",
@@ -560,6 +637,7 @@
      "base_uri": "https://localhost:8080/",
      "height": 240
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 1296,
      "status": "error",
@@ -585,6 +663,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "gC4Kl8w-H5be"
    },
    "outputs": [],
@@ -598,6 +677,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "OkDs2ID-JT8T"
    },
    "outputs": [],
@@ -611,6 +691,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "icay8UXTJm2e"
    },
    "outputs": [],
@@ -624,6 +705,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "I1rOSqRbF9s0"
    },
    "outputs": [],
@@ -638,6 +720,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "xCs3LRHrSA7V"
    },
    "outputs": [],
@@ -653,6 +736,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "fTFcXLUbSz5Z"
    },
    "outputs": [],
@@ -667,6 +751,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "L0aOKQ7QSd2C"
    },
    "outputs": [],
@@ -680,7 +765,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# a tuple that contains a list - which is mutable\n",
@@ -691,7 +778,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# you can modify a mutable object inside a tuple\n",
@@ -702,6 +791,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "QlmMzMwQKUTr"
    },
    "source": [
@@ -715,6 +805,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "m9B15Qy3KuiC"
    },
    "outputs": [],
@@ -728,6 +819,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "hiCuzZ9FM-B6"
    },
    "source": [
@@ -739,6 +831,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "n2U5wO6oNB7p"
    },
    "outputs": [],
@@ -750,6 +843,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "4hOmmGWUNI93"
    },
    "source": [
@@ -761,6 +855,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "id": "Tr1rlL0TRbX2"
    },
    "outputs": [],
@@ -771,6 +866,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "3GG3dHJVRs9u"
    },
    "source": [
@@ -783,6 +879,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "3GG3dHJVRs9u"
    },
    "source": [
@@ -802,7 +899,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### Two ways to create sets"
    ]
@@ -810,7 +909,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# give a list to the set() function\n",
@@ -821,7 +922,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# set literal with curly braces\n",
@@ -831,7 +934,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "#### Set Operations"
    ]
@@ -839,7 +944,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Union\n",
@@ -849,7 +956,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Intersection\n",
@@ -859,7 +968,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Difference (elements in a that are not in b)\n",
@@ -869,7 +980,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Symmetric Difference (elements in either a or b but not both)\n",
@@ -879,6 +992,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "j5Wnm-fqSZsV"
    },
    "source": [
@@ -889,6 +1003,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "0aQVasBdSgUY"
    },
    "source": [
@@ -904,7 +1019,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "dictionary = {'a': 1, 'b': 2, 'c':3}\n",
@@ -914,6 +1031,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "cVAL16lU1RXE"
    },
    "source": [
@@ -927,6 +1045,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "JjUlkVo74dpt"
    },
    "source": [
@@ -936,6 +1055,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "W7-2-eByUXNQ"
    },
    "source": [
@@ -952,6 +1072,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 1334,
      "status": "ok",
@@ -977,6 +1098,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "HNBljiSr4sRS"
    },
    "source": [
@@ -993,6 +1115,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 887,
      "status": "ok",
@@ -1018,6 +1141,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": false,
     "id": "fm5dBC1L5mS2"
    },
    "source": [
@@ -1036,6 +1160,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "collapsed": false,
     "executionInfo": {
      "elapsed": 884,
      "status": "ok",
@@ -1062,14 +1187,24 @@
  "metadata": {
   "colab": {
    "authorship_tag": "ABX9TyOJqnKF1h9lOYBASanrhKiw",
-   "collapsed_sections": [],
+   "collapsed_sections": null,
    "mount_file_id": "16wgF3CthOc5yuHtHQmDrY1sVaud2j0ek",
    "name": "Introduction.ipynb",
-   "provenance": []
+   "provenance": null
   },
   "kernelspec": {
+   "argv": [
+    "python",
+    "-m",
+    "ipykernel_launcher",
+    "-f",
+    "{connection_file}"
+   ],
    "display_name": "Python 3",
+   "env": null,
+   "interrupt_mode": "signal",
    "language": "python",
+   "metadata": null,
    "name": "python3"
   },
   "language_info": {
@@ -1083,7 +1218,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
-  }
+  },
+  "name": "01_Intro_Python_Data_Structures.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 4
