--- a/01_Foundations/04_SAS_Python.ipynb
+++ b/01_Foundations/04_SAS_Python.ipynb
@@ -7,16 +7,19 @@
     "# SAS and Python Basics\n",
     "This notebook will get you started with accessing SAS using Python.\n",
     "\n",
+    "---\n",
     "## Prerequisites\n",
-    "Although these exercies should work with any SAS 9.4 server installation, we assume you are using SAS OnDemand for Analytics (ODA).\\\n",
-    "You will first need to register for an free ODA account by following these instructions: https://support.sas.com/ondemand/steps.html\n",
+    "We assume you are using **SAS OnDemand for Academics (ODA)** as your SAS backend.  If you haven't done so, you will first need to register for an free **ODA** account by following these instructions: https://support.sas.com/ondemand/steps.html\n",
     "\n",
-    "Once you have authenticated to ODA, follow the instructions under [SASPy access to SAS® hosted servers](https://support.sas.com/ondemand/saspy.html) to configure your Python environment to access the ODA SAS server.\n",
+    "Once you have authenticated to **ODA**, follow the instructions under [SASPy access to SAS® hosted servers](https://support.sas.com/ondemand/saspy.html) to configure your Python environment to access the ODA SAS server.\n",
     "\n",
+    "We will be using Python 3.6 or later.  If you don't have a Python environment setup, [Anaconda](https://www.anaconda.com/products/individual) is an excellent choice to get started.\n",
+    "\n",
+    "---\n",
     "## References:\n",
     "* Examples on GitHub: https://github.com/sassoftware/saspy-examples \n",
-    "* SASPy Documentation: https://sassoftware.github.io/saspy/\n",
-    "* SASPy PyPI page: https://pypi.org/project/saspy/"
+    "* Documentation: https://sassoftware.github.io/saspy/\n",
+    "* PyPI page: https://pypi.org/project/saspy/"
    ]
   },
   {
@@ -24,9 +27,28 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Imports\n",
-    "The first section of any Python program is, by convention, the imports.\\\n",
-    "The imports in this section load the Python Libraries that you will be using."
+    "## Import Python Libraries\n",
+    "The Python ***import*** statement is responsible for loading libraries that you will be using in your program. \n",
+    "\n",
+    "There are two basic ways of importing libraries:\n",
+    "1. Using the ***import*** statement without a ***from***:\\\n",
+    "    ```import pandas as pd```\n",
+    "    1. find a module, loading and initializing it if necessary\n",
+    "    1. define a name or names in the local namespace for the scope where the import statement occurs.\n",
+    "1. Using a ***from*** statement with ***import***:\\\n",
+    "    ```from IPython.display import HTML```\n",
+    "    1. find the module specified in the from clause, loading and initializing it if necessary;\n",
+    "    1. for each of the identifiers specified in the import clauses:\n",
+    "        1. check if the imported module has an attribute by that name\n",
+    "        1. if not, attempt to import a submodule with that name and then check the imported module again for that attribute\n",
+    "        1. if the attribute is not found, ImportError is raised.\n",
+    "        1. otherwise, a reference to that value is stored in the local namespace, using the name in the ***as*** clause if it is present, otherwise using the attribute name\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "A **module** is a Python package that has been installed with **pip** or **conda**\\\n",
+    "The **as** statement provides an alternative name or \"alias\" so you can type **pd** rather than **pandas** in your code."
    ]
   },
   {
@@ -35,11 +57,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Standard imports need to execute before your code.\n",
     "import saspy\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/dowenk/anaconda3/envs/SAS/lib/python3.8/site-packages/saspy']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saspy.__path__"
    ]
   },
   {
@@ -59,29 +102,7 @@
     "    * With this method, data is pulled into your Python session.\n",
     "    * You can then manipulate and analyse the data using Python libraries and code you write.  \n",
     "\n",
-    "### In reality you may be using a combination of remote and local data manipulation and analysis to get the job done."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Executing remotely on the SAS Server\n",
-    "\n",
-    "For example, consider this SAS code snippet:\n",
-    "\n",
-    "\n",
-    "```\n",
-    "data myclass;\n",
-    "    set sashelp.class;\n",
-    "run;\n",
-    " \n",
-    "proc print data=myclass;\n",
-    "run;\n",
-    "```\n",
-    "\n",
-    "How could we do the same thing in Python using the SAS backend compute server (here we are using ODA)?"
+    "**NOTE: In reality you may be using a combination of remote and local data manipulation and analysis to get the job done.**"
    ]
   },
   {
