--- a/01_Foundations/01_Python_Data_Structures.ipynb
+++ b/01_Foundations/01_Python_Data_Structures.ipynb
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "# The pointer \"a\" points to an object whose value is 3.14\n",
+    "# The variable \"a\" points to an object whose value is 3.14\n",
     "a = 3.14\n",
     "b = a"
    ]
@@ -115,7 +115,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The variable \"b\" points to the same object as \"a\".  \n",
     "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 608,
+     "status": "ok",
+     "timestamp": 1608496210115,
+     "user": {
+      "displayName": "Don Koch",
+      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GizPaz5Q6VSf8iuBk-yy6t2E90NtjrjTJizHbMb=s64",
+      "userId": "10116018109646484238"
+     },
+     "user_tz": 300
+    },
+    "id": "IHZ7UcyJx4rs",
+    "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
+   },
+   "outputs": [],
+   "source": [
+    "# Do the two pointers point to the same object?\n",
+    "a is b"
    ]
   },
   {
@@ -124,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The address of the object \"a\" is pointing to is...\n",
     "id(a)"
    ]
   },
@@ -133,6 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The address of the object \"b\" is pointing to is...\n",
     "id(b)"
    ]
   },
@@ -142,99 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = b + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "??b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 608,
-     "status": "ok",
-     "timestamp": 1608496210115,
-     "user": {
-      "displayName": "Don Koch",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GizPaz5Q6VSf8iuBk-yy6t2E90NtjrjTJizHbMb=s64",
-      "userId": "10116018109646484238"
-     },
-     "user_tz": 300
-    },
-    "id": "IHZ7UcyJx4rs",
-    "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
-   },
-   "outputs": [],
-   "source": [
-    "# The type of the object that \"a\" points to is...\n",
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 608,
-     "status": "ok",
-     "timestamp": 1608496210115,
-     "user": {
-      "displayName": "Don Koch",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GizPaz5Q6VSf8iuBk-yy6t2E90NtjrjTJizHbMb=s64",
-      "userId": "10116018109646484238"
-     },
-     "user_tz": 300
-    },
-    "id": "IHZ7UcyJx4rs",
-    "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
-   },
-   "outputs": [],
-   "source": [
-    "# The address of the object that \"a\" points to\n",
-    "id(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 608,
-     "status": "ok",
-     "timestamp": 1608496210115,
-     "user": {
-      "displayName": "Don Koch",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GizPaz5Q6VSf8iuBk-yy6t2E90NtjrjTJizHbMb=s64",
-      "userId": "10116018109646484238"
-     },
-     "user_tz": 300
-    },
-    "id": "IHZ7UcyJx4rs",
-    "outputId": "bb15141e-8d9a-4a6d-b725-6ec5f3a668b0"
-   },
-   "outputs": [],
-   "source": [
-    "# CAUTION\n",
-    "# Assingment(=) does NOT make a copy of an object\n",
-    "b = a\n",
-    "# The variable \"b\" now points to the same object as \"a\"\n",
+    "# The object pointed to by \"b\" is not changed, it was destroyed and a new object created. \n",
+    "b = b + 1\n",
     "id(b)"
    ]
   },
@@ -288,29 +227,8 @@
    },
    "outputs": [],
    "source": [
-    "# Point variable \"a\" to a different object\n",
-    "a = 6.28\n",
-    "id(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Address of b and a no longer the same\n",
-    "id(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# b and a no longer the same\n",
-    "a is b"
+    "# The type of the object that \"a\" points to is...\n",
+    "type(a)"
    ]
   },
   {
@@ -1517,6 +1435,13 @@
    "source": [
     "e is ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
