--- a/01_Foundations/01_Python_Data_Structures.ipynb
+++ b/01_Foundations/01_Python_Data_Structures.ipynb
@@ -47,8 +47,7 @@
     "1. [Sets](#40)\n",
     "    1. [Sets](#40)\n",
     "    1. [Frozen Sets](#42)\n",
-    "1. [Mappings](#50)\n",
-    "    1. [Dictionaries](#51)\n",
+    "1. [Dictionaries](#50)\n",
     "1. [Special Types](#60)\n",
     "    1. [None](#61)\n",
     "    1. [NotImplimented](#62)\n",
@@ -1006,21 +1005,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "id": "n2U5wO6oNB7p"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50, 60, 70, 80]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "L = [1, 2, 3, 4]\n",
-    "L"
+    "l = [10, 20, 30, 40, 50, 60, 70, 80]\n",
+    "l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = (1, 2, 3, 4)\n",
     "list(t)"
@@ -1028,9 +1069,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H', 'e', 'l', 'l', 'o']"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = 'Hello'\n",
     "list(s)"
@@ -1045,19 +1097,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20, 30]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slicing\n",
-    "L[1:3]"
+    "l[1:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50, 60]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From beginning to an index\n",
+    "l[:6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50, 60, 70, 80]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# From an index to the end\n",
+    "l[4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 30, 50, 70]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extended Slicing\n",
+    "l[0:8:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'D', 'B', 'A']"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sorting\n",
     "h = ['C', 'D', 'B', 'A']\n",
@@ -1066,9 +1203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D']"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "h.sort()\n",
     "h"
@@ -1076,9 +1224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D', 'E']"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Appending\n",
     "h.append('E')\n",
@@ -1118,8 +1277,6 @@
    },
    "source": [
     "---\n",
-    "---\n",
-    "<a class=\"anchor\" id=\"40\"></a>\n",
     "<a class=\"anchor\" id=\"40\"></a>\n",
     "## Sets\n",
     "[Back to Table of Contents](#0)"
@@ -1154,23 +1311,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 6, 'bob'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# give a list to the set() function\n",
-    "a = set([2, 4, 6, 2, 3, 6, 6, 6, 4])\n",
+    "a = set([2, 4, 6, 2, 3, 6, 6, 6, 4, 'bob'])\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 40, 60, 70, 'bob', 'mary'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# set literal with curly braces\n",
-    "b = {2, 2, 40, 60, 60, 70}\n",
+    "b = {2, 2, 40, 60, 60, 70, 'mary', 'bob'}\n",
     "b"
    ]
   },
@@ -1183,9 +1362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 40, 6, 60, 70, 'bob', 'mary'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Union\n",
     "a | b"
@@ -1193,9 +1383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 'bob'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Intersection\n",
     "a & b"
@@ -1203,9 +1404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4, 6}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Difference (elements in a that are not in b)\n",
     "a - b"
@@ -1213,12 +1425,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{40, 60, 70, 'mary'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Difference (elements in b that are not in a)\n",
+    "b - a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4, 40, 6, 60, 70, 'mary'}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Symmetric Difference (elements in either a or b but not both)\n",
     "a ^ b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "70\n",
+      "40\n",
+      "mary\n",
+      "bob\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in b:\n",
+    "    print(e)"
    ]
   },
   {
@@ -1242,15 +1509,7 @@
    },
    "source": [
     "---\n",
-    "---\n",
     "<a class='anchor' id='50'></a>\n",
-    "## Mappings\n",
-    "[Back to Table of Contents](#0)\n",
-    "\n",
-    "* Finite sets of objects indexed by arbitrary index sets. \n",
-    "* Use subscript notation a[k] to select and item indexed by k from the mapping a\n",
-    "\n",
-    "<a class='anchor' id='51'></a>\n",
     "### Dictionaries\n",
     "[Back to Table of Contents](#0)\n",
     "\n",
@@ -1261,21 +1520,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 5, 'b': 2, 'c': 3, 'd': 88}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "D = {'a': 1, 'b': 2, 'c':3}\n",
-    "D"
+    "# Notice there are two 'a'. Only the latter on in the list is kept.\n",
+    "d = {'a': 1, 'b': 2, 'c': 3, 'a': 5, 'd': 88}\n",
+    "d\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "D['b']"
+    "# Retrieve a single item from a Dictionary\n",
+    "d['b']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 5, 'b': 55, 'c': 3, 'd': 88}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Replace an existing value\n",
+    "d['b'] = 55\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 5, 'c': 3, 'd': 88}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete a key/value pair\n",
+    "del d['b']\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Delete a key/value out of the dict, returning the value or the second argument if key/value don't exist\n",
+    "d.pop('a', 'Default Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Default Value'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Return the value or the second argument if key/value don't exist. \n",
+    "d.get('a', 'Default Value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "88\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Itterate through all key/value pairs in the dict\n",
+    "for key in d:\n",
+    "    print(d[key])\n",
+    "    "
    ]
   },
   {
